<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.FouadKom</groupId>
	<artifactId>lds</artifactId>
	<version>0.0.2</version>
	<!--
	This new version includes:
	- tried newer Apache Jena version (3.7.0 -> 4.3.2)
		- !NO UPDATE PERFORMED! (set back to 3.7.0) because of test failure:
		- java.lang.NoSuchFieldError: SHACLC at org.apache.jena.shacl.compact.SHACLC.init(SHACLC.java:40)
		- probably some dependency not working with newer version (e.g. hdt-jena)
	- newer compiler plugin version (3.5.1 -> 3.9.0)
	- newer version of google gson (2.8.5 -> 2.8.9)
	- newer version of apache commons-math3 (3.5 -> 3.6.1)
	- newer version of apache commons-io (2.7 -> 2.11.0)
	- newer version of apache commons-csv (1.7 -> 1.9.0)
	- newer version of mapdb (3.0.7 -> 3.0.8)
	- newer version of junit (4.13.1 -> 4.13.2)
	- newer version of tinkerpop gremlin (3.3.3 -> 3.5.2)
	- now loading hdt from rdfhdt.org (instead of eu.wdaqua) + newer version
	- Added: build sources and javadoc
	- Fixes and improvements in comments for javadoc to work properly (e.g parameters not in signature of LDSD.java, comments of LDDatasetFactory)
	- removed some unused imports
	- closing resources in HDTFileLdDataset
	- removed unused double d in lds.benchmark.Utility.java 117 : isNumeric()
	- lds.feature.Feature.java : line 27 (second constructor) removed "this." infront of method calls
	- ld.LdManager.ontologies.WikiDataLdManager has a big problem in method "getSuperConceptsFromInitial()"
		- it always returned an empty list, as the array was never used
	- LdManagerBase.java:234 : getEdges(a) - made it work with empty graph names
	- Fixed: Adjusted LDSD_localRDF.java Test to use "null" as default dataset graph name so that the test no longer fails
	- Fixed: LdManagerBase.java:getSubjects(R a) not checking for "blank node" subjects => library crash
	- Fixed: HybridMeasuresLdManagerBase.java:getIngoingFeatures(R a) not checking for "blank node" subjects => library crash
	- Fixed: DistanceMeasuresLdManager.java:countSubject(URI l, R a) does not check if the list contains "-1", which was set previously on indexing, causing index out of bounds => library crash
	- Fixed: RemoteSparqlLdDataset.java:close() throws NullPointerException if result were taken from index only
	- Updated Resim Constructor to use just a single one (improved maintainability)
	- BUGS:
		- hard coded default graph is unusual and causes problems, see: LdDatasetCreator.getLocalDataset()
			- currently uses "http://graph/dataset" as default, which causes LDSD tests to fail
			- suggestion: use the method that allows to set it to "null" util fixed
	- Some more changes (see commit diff)
	-->

	<name>${project.groupId}:${project.artifactId}</name>
	<description>A Java library for Linked Open Data based semantic similarity measures.</description>
	<url>https://github.com/FouadKom/lds/blob/master/doc/General_Explanation_of_the_Library.md</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jenaVersion>3.7.0</jenaVersion>
		
		<!-- Following is set by profile (just leave as it is) -->
		<exclude.examples.path>EXAMPLESTOEXCLUDE</exclude.examples.path>
	</properties>

	<licenses>
		<license>
			<name>GNU Affero General Public License v3.0</name>
			<url>https://www.gnu.org/licenses/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Fouad Komeiha</name>
			<email>fouadkomeiha.94@gmail.com</email>
			<organization>University of Tours, France</organization>
			<organizationUrl>https://www.univ-tours.fr/</organizationUrl>
		</developer>

		<developer>
			<name>Nasredine Cheniki</name>
			<email>Nacer.Cheniki@gmail.com</email>
			<organization>University of Tours, France</organization>
			<organizationUrl>https://www.univ-tours.fr/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git://github.com/FouadKom/lds.git</connection>
		<developerConnection>scm:git:git://github.com/FouadKom/lds.git</developerConnection>
		<url>http://github.com/FouadKom/lds</url>
	</scm>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.tinkerpop</groupId>
			<artifactId>gremlin-core</artifactId>
			<version>3.5.2</version>
		</dependency>

		<dependency>
			<groupId>org.apache.tinkerpop</groupId>
			<artifactId>tinkergraph-gremlin</artifactId>
			<version>3.5.2</version>
		</dependency>

		<dependency>
			<groupId>com.github.sharispe</groupId>
			<artifactId>slib-sml</artifactId>
			<version>0.9.1</version>
			<type>jar</type>
		</dependency>

		<!--
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-core</artifactId>
            <version>3.7.0</version>
            <type>jar</type>
       </dependency>

        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-arq</artifactId>
            <version>3.7.0</version>
            <type>jar</type>
        </dependency>

        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-base</artifactId>
            <version>3.7.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-tdb</artifactId>
            <version>3.7.0</version>
        </dependency>

        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>apache-jena</artifactId>
            <version>3.17.0</version>
            <type>pom</type>
        </dependency>
-->
		<!-- Apache Jena -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena-libs</artifactId>
			<version>${jenaVersion}</version>
			<type>pom</type>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.9</version>
		</dependency>

		<dependency>
			<groupId>org.mapdb</groupId>
			<artifactId>mapdb</artifactId>
			<version>3.0.8</version>
		</dependency>

		<!-- Previously used groupId: eu.wdaqua -->
		<dependency>
			<groupId>org.rdfhdt</groupId>
			<artifactId>hdt-api</artifactId>
			<version>2.1.2</version>
		</dependency>

		<dependency>
			<groupId>org.rdfhdt</groupId>
			<artifactId>hdt-jena</artifactId>
			<version>2.1.2</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
			<type>jar</type>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-csv</artifactId>
			<version>1.9.0</version>
			<type>jar</type>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<!-- Exclude examples if "env" is set to "prod". -->
					<excludes>
						<exclude>${exclude.examples.path}</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- Added additionally to generate sources.jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>${exclude.examples.path}</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- Added additionally to generate javadocs.jar -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<sourceFileExcludes>
						<sourceFileExclude>${exclude.examples.path}</sourceFileExclude>
					</sourceFileExcludes>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
	<!-- Build Profiles -->
	<profiles>
		<profile>
			<id>release-profile</id>
			<activation>
				<!-- Build version without examples by adding "-Denv=prod" to Maven commands. -->
				<property>
					<name>env</name>
					<value>prod</value>
				</property>
			</activation>
			<!-- Overwrite according property. -->
			<properties>
				<exclude.examples.path>**/s1r0hub/examples/*.*</exclude.examples.path>
			</properties>
		</profile>
	</profiles>
</project>
